plugins/xpath/xpath-lang/testData/xpath2/highlighting/types/numericIDivDuration.xpath2
4 idiv <error descr="Expected type 'xs:numeric', got 'xs:dayTimeDuration'">'P0DTOH' cast as xs:dayTimeDuration</error>